[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Lobster-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Spript/Configuracao.gd" type="Script" id=2]
[ext_resource path="res://assets/icones/baseline_close_black_18dp.png" type="Texture" id=3]
[ext_resource path="res://assets/images/teste.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.901961, 0.160784, 0.388235, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="PopupConfiguracao" type="PopupPanel"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 457.0
margin_right = -145.0
margin_bottom = -459.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.439216, 0.439216, 0.439216, 0.6 )
self_modulate = Color( 0.439216, 0.439216, 0.439216, 0.6 )
position = Vector2( -178.381, -459.034 )
scale = Vector2( 1, 1.00557 )
texture = ExtResource( 4 )
centered = false

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 395.0
margin_bottom = 364.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
margin_right = 395.0
margin_bottom = 63.0

[node name="Label" type="Label" parent="GridContainer/HBoxContainer"]
margin_right = 355.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Configuração"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fechar" type="TextureButton" parent="GridContainer/HBoxContainer"]
margin_left = 359.0
margin_right = 395.0
margin_bottom = 36.0
rect_clip_content = true
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="GridContainer"]
margin_top = 67.0
margin_right = 395.0
margin_bottom = 363.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Container"]
margin_left = 110.0
margin_top = 88.0
margin_right = 285.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicButton" type="CheckButton" parent="GridContainer/Container/VBoxContainer"]
margin_right = 175.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Música"

[node name="controleButton" type="CheckButton" parent="GridContainer/Container/VBoxContainer"]
margin_top = 50.0
margin_right = 175.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Controle"

[node name="Button" type="Button" parent="GridContainer/Container/VBoxContainer"]
margin_top = 100.0
margin_right = 175.0
margin_bottom = 120.0
[connection signal="pressed" from="GridContainer/HBoxContainer/fechar" to="." method="_on_fechar_pressed"]
[connection signal="toggled" from="GridContainer/Container/VBoxContainer/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="toggled" from="GridContainer/Container/VBoxContainer/controleButton" to="." method="_on_controleButton_toggled"]
[connection signal="pressed" from="GridContainer/Container/VBoxContainer/Button" to="." method="_on_Button_pressed"]
